# CrewAI-Crew-Creator

./: .gitignore  README.md  requirements.txt
crew_creator/: app.py  pyproject.toml
crew_creator/src/crew_creator/: crew.py  main.py
crew_creator/src/crew_creator/config/: agents.yaml  tasks.yaml
crew_creator/src/crew_creator/tools/: file_writer_tool.py  packager_tool.py  project_init_tool.py  shell_tool.py
crew_creator/templates/: index.html
