[project]
name = "crew_creator"
version = "0.1.0"
description = "crew_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
crew_creator = "crew_creator.main:run"
run_crew = "crew_creator.main:run"
train = "crew_creator.main:train"
replay = "crew_creator.main:replay"
test = "crew_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
